# ChangeLog for sci-libs/openblas
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Oct 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
  Thanks to kiwifb for reporting
  https://github.com/gentoo-science/sci/issues/280 - Fix openblas: discrepancy
  between installed libraries and .pc file.

  19 Oct 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
  The fix for Bug 524612 failed in src_install building openblas from git. The
  fix is to move applying the patch to src_compile after building the library,
  then remove config.h and config_last.h; make config.h - ignoring the spurious
  warning; then cp config.h to config_last.h.

*openblas-0.2.12 (19 Oct 2014)

  19 Oct 2014; Mark Wright <gienah@gentoo.org> +openblas-0.2.12.ebuild,
  openblas-9999.ebuild:
  Fix Bug 524612 - [science overlay] sci-libs/openblas-0.2.11 - Assembler
  messages: ../kernel/x86_64/gemm_kernel_8x4_barcelona.S:451: Error: missing
  ')', thanks to Juergen Rose, Jean-Francis Roy and Steven Trogdon for
  reporting. The problem was that applying the
  -0.2.11-openblas_config_header_same_between_ABIs.patch patch in src_prepare()
  causes build failures on assembler code as the assembler does not understand
  sizeof(float). So delay applying the patch until src_install(). Bump openblas
  to 0.2.12.

  13 Oct 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
  Refactor openblas to use the fortran-int64.eclass. Move the virtuals from
  RDEPEND to PDEPEND to avoid circular dependencies. Specify the pkg-config
  module name in openblas

  13 Sep 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
  Remove the setting of the FC and F77 environment variables, instead sed the
  COMMON_OPT in Makefile.rule to include the $(get_abi_CFLAGS). Add
  get_openblas_abi_cflags and get_openblas_abi_fflags, call them to create the
  pkg-config ${profname}.pc files. Call get_openblas_abi_cflags to obtain the