@@ -1,4 +1,5 @@
 DIST openblas-0.2.11-gentoo.patch 246353 SHA256 68c13526f37bf510f02961eb3a7918feb98f6bb10a0d888b8575b9146fd56c09 SHA512 4d8fcec9e44f873c31214d48492a171dd00dc18524a7ab51e51fa27c038b62bfd07be281b5af899943e10fb45c6d0b5b704ba3fa93c6bec74aca0a3a6c0f48ab WHIRLPOOL a4b1078f6ba06a6530a9267d950df8824abccd41aa432ce6568641329f828cc1abea7324f588b0b3d1d3339c36b79ea7147d64f0c8b27d12f87bf8be2a97e92a
 DIST openblas-0.2.11.tar.gz 9765198 SHA256 babe5898c05da8a95249c1b038f7fbe14a95e35fee75358d649009f93ef444ed SHA512 4b7928613356848628c0230dc5990d269a3899beb700617cd385529aa5c26f0d0063081a25cbd8ab924d41b5f8a079385e12da3e156d784406290c5c0c40a0e2 WHIRLPOOL 66d0895c76b02625354db157319ee12be62928d2f9ea4241e898e227f466fcbed496e934f413a570c3a105e7d75973b2af9cbabc8a9c78922f240f6bddf36160
 DIST openblas-0.2.12.tar.gz 9852709 SHA256 0f1727700e3991aea6d4dab11daa1254603b19a73df0a2eb474f6db7bc6d090d SHA512 ab00eecef89fc40d7b298958b261d76fcb1d8f26970d24d663bf27f1c6b258d952da6bc2565d905e9267cd97e5450025f2a80a8bffabd202e99f35d40c1e412d WHIRLPOOL 253617f204564b480ac96e53e3edfee4044537c26e98bafee47226dc619852910dbc548a44cdf9c78aa044e05930c295b127accd816778d65987bc9d11a7f2f4
+DIST openblas-0.2.14.tar.gz 9862952 SHA256 aba5088534719cefd77e4155c281c56a3accd3eea218574c2c3d236952bb632b SHA512 5028c0cae1eea168593d951c053d2c3692ea4bf34257b2d6cd533d43dd98d1e4ab982f56c57232e53dcc358a2f8e1e51e15a746235ff6eb64d427a97b1449b60 WHIRLPOOL 2fe8a6afee19327deb962dd9f270b2c3dbf0ee8c92d59050fec4f0d4bacdf1d97801f28a1127804e8464c3c19d7e40b293c3b4d5b5b7e43f0061346c03909e64
 DIST openblas-0.2.8.tar.gz 9471072 SHA256 048986f4e0a8d480c5e6d439915738f3298f2629d6a399a1ddb16e1629b07901 SHA512 590ffc77377e3d40f91bd91156554140da0f3eee334098cfdbd53d427173cd4374eca0f8f9a167054ea88bdcc1b3a685a6ecdc5fd70f3df0ad267d569049db79 WHIRLPOOL 550fab60c2dc8e6e94b7d5d6c5e05b19c297b63495521667e5abde087713fcc678f4be31641eaf5354a6dae1f8229cade361c35f70309f947c02fb8c5fe49f59
