@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/openblas
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*openblas-0.2.14 (27 Mar 2015)
+
+  27 Mar 2015; Denis Dupeyron <calchan@gentoo.org> +openblas-0.2.14.ebuild:
+  Version bump.
 
   20 Oct 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
   Thanks to kiwifb for reporting
